nuanced re-edit header h4 to prevent pushing against nav and to valign w/ header h1

--- a/assets/css/add-style.css
+++ b/assets/css/add-style.css
@@ -44,7 +44,7 @@ header h3 {}
 header h4 {
   font-style: italic;
   margin: 0;
-  padding: 0 0 0 calc(.125*1em);
+  padding: 0 0 0 calc(.25*1em);
 }
 
 .header-box,
