--- a/scss/_add-style.scss
+++ b/scss/_add-style.scss
@@ -28,7 +28,7 @@ header {
   h4 {
     font-style: italic;
     margin: 0;
-    padding: 0 0 0 calc(.125*1em);
+    padding: 0 0 0 calc(.25*1em);
   }
 }
 
